--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
 
 <div class="grid-container">
     <div class="grid-50">
-        <div id="content-circle" class="img-container">
+        <div id="content-circle" class="img-container active">
             <img src="http://40.media.tumblr.com/56a769d059eb1c63bbc75970c218f72a/tumblr_nhj6vorIwt1ticazxo4_500.jpg"
                  class="bg">
 
@@ -300,6 +300,8 @@ https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
                 currentFilter = filter.fn;
             })
         })
+
+        currentFilter = filter[0].fn;
 
     })
 </script>
