--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@ https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
             })
         })
 
-        currentFilter = filter[0].fn;
+        currentFilter = filters[0].fn;
 
     })
 </script>
